--- a/eas-backend/package.json
+++ b/eas-backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.224.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^5.0.1",
     "express": "~4.16.0",
