--- a/eas-backend/package.json
+++ b/eas-backend/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.224.1",
+    "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -14,6 +15,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "madison": "^1.0.2",
     "morgan": "~1.9.0"
   }
 }
