--- a/eas-backend/package.json
+++ b/eas-backend/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "madison": "^1.0.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "pg": "^7.4.1"
   }
 }
