--- a/eas-frontend/package.json
+++ b/eas-frontend/package.json
@@ -9,6 +9,7 @@
     "mobx-react": "^5.0.0",
     "moment": "^2.22.0",
     "react": "^16.3.1",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.1",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.2.2"
