--- a/eas-backend/package.json
+++ b/eas-backend/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.2.1",
     "madison": "^1.0.2",
     "morgan": "~1.9.0",
     "pg": "^7.4.1"
